<?xml version="1.0"?>
<package format="3">
  <name>limoncello</name>
  <version>0.0.1</version>
  <description>The LIMOncello package</description>

  <maintainer email="carlosp335@gmail.com">CPerezRuiz335</maintainer>
  <author email="carlosp335@gmail.com">CPerezRuiz335</author>

  <license>GPL-3.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 dependencies used by the code / CMake -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <!-- System dependencies used by CMake (rosdep keys) -->
  <depend>libboost-system-dev</depend>
  <depend>libtbb-dev</depend>
  <depend>libeigen3-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
